フォントのインストール

--- a/css/style.scss
+++ b/css/style.scss
@@ -8,7 +8,7 @@ $layout-width-base: 1920px;
 $breakpoint-sp: 768px;
 
 $font-color-base: #333;
-$font-family-base: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
+$font-family-base: "Kiwi Maru", "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
 
 /* ==========================================================================
    Reset & Base
