--- a/css/modules/_about.scss
+++ b/css/modules/_about.scss
@@ -1,48 +1,36 @@
 .about {
-    background-color: #fff;
+    position: relative;
+    z-index: 10; // Ensure it overlaps MV
+    margin-top: -70px; // Pull up to overlap MV
+    background-image: url(../images/about_bg.png);
+    background-repeat: no-repeat;
+    background-size: cover; // Cover the text area fully
+    background-position: center top;
+    padding: 140px 0 140px; // Increased top padding to account for overlap and wave height
+    width: 100%;
 
     &__inner {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        gap: 60px;
-
-        @media screen and (max-width: $breakpoint-sp) {
-            flex-direction: column;
-            gap: 30px;
-        }
-    }
-
-    &__img {
-        flex: 1;
-
-        img {
-            width: 100%;
-            height: auto;
-            border-radius: 10px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-        }
+        max-width: 1000px;
+        margin: 0 auto;
+        padding: 0 20px;
     }
 
     &__text {
-        flex: 1;
-    }
-
-    &__sub {
         font-size: 24px;
-        margin-bottom: 20px;
-        color: #333;
-        position: relative;
-        padding-bottom: 15px;
+        line-height: 2.0;
+        text-align: center;
+        margin-bottom: 60px;
+        font-weight: 500;
+        letter-spacing: 0.05em;
 
-        &::after {
-            content: '';
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 60px;
-            height: 2px;
-            background-color: #333;
+        &:last-child {
+            margin-bottom: 0;
+        }
+
+        @media screen and (max-width: $breakpoint-sp) {
+            font-size: 16px;
+            margin-bottom: 40px;
+            text-align: center;
         }
     }
 }
