--- a/css/modules/_vision.scss
+++ b/css/modules/_vision.scss
@@ -72,7 +72,7 @@
         align-items: center; // Vertically center
         justify-content: space-between;
         max-width: 1080px; // User request
-        margin: 120px auto 0;
+        margin: 60px auto 0;
         position: relative; // Keep for safety
 
         @media screen and (max-width: $breakpoint-sp) {
@@ -93,10 +93,19 @@
         }
     }
 
+    &__desc {
+        font-size: clamp(14px, 2vw, 20px);
+        line-height: 1.8;
+
+        p {
+            margin-bottom: 24px;
+        }
+    }
+
     &__img--right {
         // Remove absolute positioning
         position: relative;
-        width: 670px; // User request
+        width: 48%; // User request
         max-width: none;
         flex-shrink: 0; // Prevent shrinking
         margin-left: -260px; // Force overlap (approx 670 + 60% of 1080 - 1080)
@@ -119,17 +128,20 @@
     }
 
     &__bottom-img {
-        margin-top: 80px;
-        text-align: center;
+        margin-top: 60px;
+        text-align: left;
+        width: 740px; // User request
+        max-width: none; // Allow stick out
 
         img {
-            width: 400px;
-            max-width: 80%;
+            width: 100%;
             height: auto;
         }
 
         @media screen and (max-width: $breakpoint-sp) {
-            margin-top: 50px;
+            width: 100%;
+            margin-top: 40px;
+            max-width: 100%;
         }
     }
 }
