--- a/css/style.scss
+++ b/css/style.scss
@@ -64,7 +64,11 @@ a {
 @import "modules/about";
 @import "modules/course";
 @import "modules/vision";
+@import "modules/difference";
+@import "modules/feature";
 @import "modules/service";
 @import "modules/news";
 @import "modules/contact";
 @import "modules/footer";
+@import "modules/domain";
+@import "modules/target";
