--- a/css/modules/_vision.scss
+++ b/css/modules/_vision.scss
@@ -7,7 +7,7 @@
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
-        padding: 150px 0 100px;
+        padding: 150px 0 180px;
         width: 100%;
     }
 
@@ -72,7 +72,7 @@
         align-items: center; // Vertically center
         justify-content: space-between;
         max-width: 1080px; // User request
-        margin: 60px auto 0;
+        margin: 100px auto 0;
         position: relative; // Keep for safety
 
         @media screen and (max-width: $breakpoint-sp) {
@@ -84,12 +84,24 @@
 
     &__text--green {
         text-align: left;
-        width: 60%; // User request
+        width: 70%; // User request
         position: relative;
         z-index: 2; // Text on top
 
         @media screen and (max-width: $breakpoint-sp) {
             width: 100%;
+        }
+    }
+
+    &__sub-title {
+        color: #009944;
+        font-size: 26px;
+        font-weight: 700;
+        margin-bottom: 30px;
+        line-height: 1.5;
+
+        @media screen and (max-width: $breakpoint-sp) {
+            font-size: 22px;
         }
     }
 
@@ -104,12 +116,14 @@
 
     &__img--right {
         // Remove absolute positioning
-        position: relative;
-        width: 48%; // User request
+        position: absolute;
+        width: 50%; // User request
         max-width: none;
         flex-shrink: 0; // Prevent shrinking
         margin-left: -260px; // Force overlap (approx 670 + 60% of 1080 - 1080)
         z-index: 1;
+        right: -15%;
+        top: -4%;
 
         @media screen and (max-width: $breakpoint-sp) {
             width: 100%;
@@ -128,7 +142,7 @@
     }
 
     &__bottom-img {
-        margin-top: 60px;
+        margin-top: 40px;
         text-align: left;
         width: 740px; // User request
         max-width: none; // Allow stick out
