--- a/css/style.css
+++ b/css/style.css
@@ -552,7 +552,7 @@ a:hover {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  padding: 150px 0 100px;
+  padding: 150px 0 180px;
   width: 100%;
 }
 .vision__inner {
@@ -610,7 +610,7 @@ a:hover {
   align-items: center;
   justify-content: space-between;
   max-width: 1080px;
-  margin: 60px auto 0;
+  margin: 100px auto 0;
   position: relative;
 }
 @media screen and (max-width: 768px) {
@@ -622,13 +622,25 @@ a:hover {
 }
 .vision__text--green {
   text-align: left;
-  width: 60%;
+  width: 70%;
   position: relative;
   z-index: 2;
 }
 @media screen and (max-width: 768px) {
   .vision__text--green {
     width: 100%;
+  }
+}
+.vision__sub-title {
+  color: #009944;
+  font-size: 26px;
+  font-weight: 700;
+  margin-bottom: 30px;
+  line-height: 1.5;
+}
+@media screen and (max-width: 768px) {
+  .vision__sub-title {
+    font-size: 22px;
   }
 }
 .vision__desc {
@@ -639,12 +651,14 @@ a:hover {
   margin-bottom: 24px;
 }
 .vision__img--right {
-  position: relative;
-  width: 48%;
+  position: absolute;
+  width: 50%;
   max-width: none;
   flex-shrink: 0;
   margin-left: -260px;
   z-index: 1;
+  right: -15%;
+  top: -4%;
 }
 @media screen and (max-width: 768px) {
   .vision__img--right {
@@ -662,7 +676,7 @@ a:hover {
   display: inline-block;
 }
 .vision__bottom-img {
-  margin-top: 60px;
+  margin-top: 40px;
   text-align: left;
   width: 740px;
   max-width: none;
@@ -676,6 +690,307 @@ a:hover {
     width: 100%;
     margin-top: 40px;
     max-width: 100%;
+  }
+}
+
+.difference {
+  position: relative;
+  width: 100%;
+  background-image: url(../images/difference-bg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding: 120px 0 120px;
+}
+.difference__inner {
+  max-width: 1200px;
+  margin: 0 auto;
+  position: relative;
+}
+@media screen and (max-width: 768px) {
+  .difference__inner {
+    padding: 0 20px;
+  }
+}
+.difference__content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  margin-top: 100px;
+}
+@media screen and (max-width: 768px) {
+  .difference__content {
+    flex-direction: column;
+    gap: 30px;
+  }
+}
+.difference__col {
+  width: 40%;
+  text-align: center;
+}
+.difference__col--general {
+  width: 35%;
+}
+.difference__col--gcg {
+  width: 46%;
+}
+@media screen and (max-width: 768px) {
+  .difference__col {
+    width: 100%;
+  }
+  .difference__col--general, .difference__col--gcg {
+    width: 100%;
+  }
+}
+.difference__col-title {
+  font-size: 28px;
+  font-weight: 500;
+  margin-bottom: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.difference__col-title .difference__col-logo {
+  height: auto;
+  width: 166px;
+}
+.difference__col--gcg .difference__col-title {
+  font-size: 45px;
+  margin-top: 0;
+}
+.difference__list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  text-align: left;
+  display: inline-block;
+  font-size: 28px;
+  line-height: 2;
+  font-weight: 500;
+}
+.difference__list li {
+  margin-bottom: 10px;
+  text-align: center;
+}
+.difference__arrow {
+  width: 60px;
+  flex-shrink: 0;
+}
+.difference__arrow img {
+  width: 100%;
+  height: auto;
+}
+@media screen and (max-width: 768px) {
+  .difference__arrow {
+    transform: rotate(90deg);
+    width: 40px;
+  }
+}
+.difference__gcg-box {
+  background-image: url(../images/diggerence-text-bg.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-position: center;
+  padding: 40px 40px;
+  border-radius: 30px;
+  min-height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.difference__deco {
+  position: absolute;
+  bottom: -50px;
+  left: -20%;
+  width: 300px;
+  z-index: 1;
+}
+@media screen and (max-width: 768px) {
+  .difference__deco {
+    width: 150px;
+    bottom: -30px;
+  }
+}
+
+.feature {
+  width: 100%;
+  margin-top: -60px;
+  position: relative;
+  z-index: 2;
+  background-image: url(../images/feature-bg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top center;
+  padding: 200px 0 150px;
+}
+@media screen and (max-width: 768px) {
+  .feature {
+    margin-top: -80px;
+    background-image: url(../images/feature-bg--sp.png);
+    background-size: 100% auto;
+    background-position: top center;
+    padding: 120px 0 100px;
+  }
+}
+.feature__inner {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 40px;
+  position: relative;
+}
+@media screen and (max-width: 768px) {
+  .feature__inner {
+    padding: 0 20px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .feature__title {
+    background-image: url(../images/feature-ttl-bg--sp.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    padding: 40px 0;
+    width: 100%;
+    height: auto;
+  }
+}
+.feature__list {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 74px;
+  margin-top: 60px;
+  position: relative;
+}
+@media screen and (max-width: 768px) {
+  .feature__list {
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+  }
+}
+.feature__illust {
+  position: absolute;
+  pointer-events: none;
+  z-index: 10;
+}
+.feature__illust--01 {
+  bottom: 15%;
+  left: 28%;
+  transform: translateX(-50%);
+  width: 10%;
+  max-width: 140px;
+}
+@media screen and (max-width: 768px) {
+  .feature__illust--01 {
+    position: static;
+    margin: -20px auto 20px;
+  }
+}
+.feature__illust--02 {
+  top: -150px;
+  left: 62%;
+  transform: translateX(-50%);
+  width: 20%;
+  max-width: 115px;
+}
+@media screen and (max-width: 768px) {
+  .feature__illust--02 {
+    top: -50px;
+  }
+}
+.feature__illust img {
+  max-width: 100%;
+  height: auto;
+}
+.feature__item {
+  width: 400px;
+  height: 560px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: top;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  text-align: center;
+  padding: 40px 50px 90px 50px;
+  position: relative;
+  margin: 0 -60px;
+}
+.feature__item--01 {
+  background-image: url(../images/feature-text01.png);
+  z-index: 1;
+}
+@media screen and (max-width: 768px) {
+  .feature__item--01 {
+    background-image: url(../images/feature-text01--sp.png);
+  }
+}
+.feature__item--02 {
+  background-image: url(../images/feature-text02.png);
+  z-index: 2;
+}
+@media screen and (max-width: 768px) {
+  .feature__item--02 {
+    background-image: url(../images/feature-text02--sp.png);
+  }
+}
+.feature__item--03 {
+  background-image: url(../images/feature-text03.png);
+  z-index: 1;
+  width: 460px;
+  height: 640px;
+}
+@media screen and (max-width: 768px) {
+  .feature__item--03 {
+    background-image: url(../images/feature-text03--sp.png);
+    width: 100%;
+    height: 350px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .feature__item {
+    width: 100%;
+    max-width: 350px;
+    height: 350px;
+    padding: 50px 30px;
+    margin: 0;
+  }
+}
+.feature__item-content {
+  width: 100%;
+}
+.feature__item-title {
+  font-size: 20px;
+  font-weight: 700;
+  text-align: left;
+  margin-bottom: 20px;
+  line-height: 1.5;
+  position: relative;
+  display: inline-block;
+}
+@media screen and (max-width: 768px) {
+  .feature__item-title {
+    font-size: 18px;
+  }
+}
+.feature__search-icon {
+  width: 24px;
+  height: auto;
+  vertical-align: middle;
+  margin-left: 5px;
+}
+.feature__desc {
+  font-size: 14px;
+  line-height: 1.8;
+  font-weight: 500;
+}
+@media screen and (max-width: 768px) {
+  .feature__desc {
+    font-size: 13px;
   }
 }
 
@@ -847,6 +1162,505 @@ a:hover {
 .footer__copy {
   font-size: 12px;
   color: #888;
+}
+
+.domain {
+  width: 100%;
+  padding: 100px 0;
+  position: relative;
+  background-color: #fff;
+}
+@media screen and (max-width: 768px) {
+  .domain {
+    background-image: url(../images/domain-bg--sp.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top center;
+    padding: 80px 0 100px;
+  }
+}
+.domain__inner {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 40px;
+  position: relative;
+}
+@media screen and (max-width: 768px) {
+  .domain__inner {
+    padding: 0 20px;
+  }
+}
+.domain__header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  margin-bottom: 40px;
+}
+@media screen and (max-width: 768px) {
+  .domain__header {
+    margin-bottom: 30px;
+    flex-direction: column;
+  }
+}
+.domain__title {
+  position: relative;
+  z-index: 2;
+}
+.domain__illust {
+  position: absolute;
+  top: 15%;
+  right: -9%;
+  width: 40%;
+  max-width: 525px;
+  z-index: 1;
+}
+@media screen and (max-width: 768px) {
+  .domain__illust {
+    position: relative;
+    top: auto;
+    right: auto;
+    width: 80%;
+    margin: -20px auto 0;
+  }
+}
+.domain__illust img {
+  max-width: 100%;
+  height: auto;
+}
+.domain__intro {
+  text-align: center;
+  margin-bottom: 100px;
+  position: relative;
+  z-index: 2;
+}
+.domain__desc {
+  font-size: 24px;
+  line-height: 2;
+  font-weight: 500;
+}
+@media screen and (max-width: 768px) {
+  .domain__desc {
+    font-size: 14px;
+    text-align: left;
+  }
+}
+.domain__deco-text {
+  position: absolute;
+  top: 30%;
+  left: -20%;
+  z-index: 0;
+}
+.domain__deco-text img {
+  max-width: 400px;
+  width: 100%;
+  height: auto;
+}
+@media screen and (max-width: 768px) {
+  .domain__deco-text {
+    position: relative;
+    top: auto;
+    left: auto;
+    text-align: center;
+    margin-bottom: 40px;
+  }
+  .domain__deco-text img {
+    width: 60%;
+  }
+}
+.domain__list {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+@media screen and (max-width: 768px) {
+  .domain__list {
+    flex-direction: column;
+    gap: 40px;
+  }
+}
+.domain__item {
+  width: 23%;
+  text-align: center;
+  position: relative;
+}
+@media screen and (max-width: 768px) {
+  .domain__item {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+}
+.domain__img {
+  margin-bottom: 20px;
+}
+.domain__img img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+@media screen and (max-width: 768px) {
+  .domain__img {
+    width: 100%;
+    margin-bottom: 0;
+  }
+}
+.domain__item-text {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  color: #333;
+}
+@media screen and (max-width: 768px) {
+  .domain__item-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+  }
+}
+.domain__item-ja {
+  font-size: 20px;
+  font-weight: 500;
+}
+.domain__item-ja::after {
+  content: "/";
+  margin-left: 10px;
+}
+@media screen and (max-width: 768px) {
+  .domain__item-ja {
+    font-size: 18px;
+  }
+}
+.domain__item-en {
+  font-size: 20px;
+  font-weight: 500;
+  font-family: "Kiwi Maru", "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
+  letter-spacing: 0.05em;
+}
+@media screen and (max-width: 768px) {
+  .domain__item-en {
+    font-size: 14px;
+  }
+}
+
+.target {
+  width: 100%;
+  position: relative;
+  background-image: url(../images/target-bg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding: 100px 0 150px;
+  color: #fff;
+}
+@media screen and (max-width: 768px) {
+  .target {
+    padding: 60px 0 100px;
+  }
+}
+.target__inner {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 40px;
+  position: relative;
+  text-align: center;
+}
+@media screen and (max-width: 768px) {
+  .target__inner {
+    padding: 0 20px;
+  }
+}
+.target__title {
+  color: #fff;
+  margin-bottom: 20px;
+}
+@media screen and (max-width: 768px) {
+  .target__title {
+    margin-bottom: 20px;
+  }
+}
+.target__intro {
+  font-size: 16px;
+  color: #fff;
+  font-weight: 500;
+  margin-bottom: 80px;
+}
+@media screen and (max-width: 768px) {
+  .target__intro {
+    font-size: 14px;
+    margin-bottom: 50px;
+  }
+}
+.target__list {
+  display: flex;
+  flex-direction: column;
+  gap: 0;
+  position: relative;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+@media screen and (max-width: 768px) {
+  .target__list {
+    gap: 40px;
+  }
+}
+.target__item {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-bottom: -50px;
+}
+@media screen and (max-width: 768px) {
+  .target__item {
+    margin-bottom: 0;
+    display: block;
+  }
+}
+.target__item--01 {
+  justify-content: flex-start;
+  margin-left: 100px;
+}
+.target__item--01 .target__bg-img {
+  width: 615px;
+}
+.target__item--01 .target__text-box {
+  top: 50%;
+  left: 50%;
+  transform: translate(-56%, -46%);
+}
+@media screen and (max-width: 768px) {
+  .target__item--01 {
+    margin-left: 0;
+  }
+  .target__item--01 .target__bg-img {
+    width: 100%;
+  }
+}
+.target__item--02 {
+  justify-content: flex-end;
+  margin-right: 100px;
+  margin-top: -50px;
+}
+.target__item--02 .target__bg-img {
+  width: 420px;
+}
+.target__item--02 .target__text-box {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+@media screen and (max-width: 768px) {
+  .target__item--02 {
+    margin-right: 0;
+    margin-top: 0;
+  }
+  .target__item--02 .target__bg-img {
+    width: 100%;
+  }
+}
+.target__item--03 {
+  justify-content: flex-start;
+  margin-left: 50px;
+}
+.target__item--03 .target__bg-img {
+  width: 440px;
+}
+.target__item--03 .target__text-box {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+@media screen and (max-width: 768px) {
+  .target__item--03 {
+    margin-left: 0;
+  }
+  .target__item--03 .target__bg-img {
+    width: 100%;
+  }
+}
+.target__item--04 {
+  justify-content: flex-end;
+  margin-right: 50px;
+}
+.target__item--04 .target__bg-img {
+  width: 440px;
+}
+.target__item--04 .target__text-box {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+@media screen and (max-width: 768px) {
+  .target__item--04 {
+    margin-right: 0;
+  }
+  .target__item--04 .target__bg-img {
+    width: 100%;
+  }
+}
+.target__item--05 {
+  justify-content: center;
+  margin-top: 50px;
+}
+.target__item--05 .target__bg-img {
+  width: 400px;
+}
+.target__item--05 .target__text-box {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+@media screen and (max-width: 768px) {
+  .target__item--05 {
+    margin-top: 0;
+  }
+  .target__item--05 .target__bg-img {
+    width: 100%;
+  }
+}
+.target__content {
+  position: relative;
+  width: fit-content;
+}
+@media screen and (max-width: 768px) {
+  .target__content {
+    width: 100%;
+  }
+}
+.target__bg-img img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+@media screen and (max-width: 768px) {
+  .target__bg-img img {
+    width: 100%;
+  }
+}
+.target__text-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  padding: 0 40px;
+  text-align: center;
+  color: #333;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+@media screen and (max-width: 768px) {
+  .target__text-box {
+    padding: 0 30px;
+  }
+}
+.target__num {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  background-color: #e67e22;
+  color: #fff;
+  border-radius: 50%;
+  font-weight: 700;
+  font-size: 18px;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+.target__item--01 .target__num {
+  top: 0;
+  left: 0;
+  transform: translate(-50%, -50%);
+}
+.target__item-title {
+  font-size: 28px;
+  font-weight: 700;
+  margin-bottom: 20px;
+  line-height: 1.6;
+}
+@media screen and (max-width: 768px) {
+  .target__item-title {
+    font-size: 18px;
+    margin-bottom: 15px;
+  }
+}
+.target__item-desc {
+  font-size: 20px;
+  line-height: 1.8;
+  font-weight: 500;
+}
+@media screen and (max-width: 768px) {
+  .target__item-desc {
+    font-size: 13px;
+  }
+}
+.target__deco-wrap {
+  position: absolute;
+  top: -80px;
+  left: -150px;
+  z-index: 10;
+  transform: rotate(-10deg);
+}
+@media screen and (max-width: 768px) {
+  .target__deco-wrap {
+    top: -40px;
+    left: 0;
+    position: relative;
+    margin-bottom: 20px;
+    transform: none;
+    text-align: center;
+    width: 100%;
+  }
+}
+.target__deco-wrap img {
+  width: 200px;
+  height: auto;
+}
+@media screen and (max-width: 768px) {
+  .target__deco-wrap img {
+    width: 150px;
+  }
+}
+.target__item-deco {
+  position: absolute;
+  z-index: 2;
+}
+.target__item-deco--02 {
+  top: -30px;
+  left: -20px;
+  width: 60px;
+}
+@media screen and (max-width: 768px) {
+  .target__item-deco {
+    display: none;
+  }
+}
+.target__bottom-text {
+  margin-top: 100px;
+}
+.target__bottom-text p {
+  font-size: 20px;
+  font-weight: 700;
+  color: #fff;
+  line-height: 2;
+}
+@media screen and (max-width: 768px) {
+  .target__bottom-text {
+    margin-top: 60px;
+  }
+  .target__bottom-text p {
+    font-size: 16px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
