--- a/css/modules/_voice.scss
+++ b/css/modules/_voice.scss
@@ -5,8 +5,8 @@
    ========================================================================== */
 .voice {
     position: relative;
-    padding-bottom: 150px;
     padding-top: 0;
+    padding-bottom: 0;
     margin-top: -60px;
     /* Space for bottom content */
 
