--- a/css/style.scss
+++ b/css/style.scss
@@ -79,3 +79,5 @@ a {
 @import "modules/qa";
 @import "modules/voice";
 @import "modules/pickup";
+@import "modules/float-btn";
+@import "modules/animation";
